# requestty

./: .fdignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  todo.md
.cargo/: config.toml
.vim/: coc-settings.json
crossterm-snapshots/: checkbox__helpers__filter-2.snap  checkbox__helpers__filter-6.snap  checkbox__helpers__transform-4.snap  checkbox__helpers__transform-5.snap  checkbox__helpers__transform-6.snap  checkbox__helpers__validate-4.snap  checkbox__helpers__validate-7.snap  confirm__helpers__validate-10.snap  confirm__helpers__validate-11.snap  confirm__helpers__validate-5.snap  confirm__helpers__validate-7.snap  confirm__helpers__validate-8.snap  confirm__helpers__validate-9.snap  confirm__helpers__validate.snap  discourse__question__checkbox__tests__basic__render-5.snap  discourse__question__checkbox__tests__basic__render-6.snap  discourse__question__checkbox__tests__basic__render.snap  discourse__question__checkbox__tests__pagination__render-2.snap  (+142 more)
discourse-ui/: Cargo.toml
discourse-ui/crossterm-snapshots/: discourse_ui__input__tests__goto_last_line.snap  discourse_ui__input__tests__print_error.snap  discourse_ui__input__tests__render.snap  discourse_ui__prompt__tests__render-3.snap  discourse_ui__prompt__tests__render-7.snap  discourse_ui__prompt__tests__render.snap  discourse_ui__select__tests__render-2.snap  discourse_ui__select__tests__render-3.snap  discourse_ui__select__tests__render-4.snap  discourse_ui__string_input__tests__render-2.snap  discourse_ui__string_input__tests__render-3.snap  discourse_ui__text__tests__render_multiline-2.snap  discourse_ui__text__tests__render_multiline.snap  discourse_ui__text__tests__render_single_line.snap
discourse-ui/src/: char_input.rs  error.rs  input.rs  layout.rs  lib.rs  list.rs  prompt.rs  string_input.rs  style.rs  text.rs  widget.rs  widgets.rs
discourse-ui/src/backend/: crossterm.rs  mod.rs  style.rs  termion.rs  test_backend.rs
discourse-ui/src/crossterm-snapshots/: discourse_ui__prompt__tests__render-2.snap  discourse_ui__prompt__tests__render-3.snap  discourse_ui__prompt__tests__render-4.snap  discourse_ui__prompt__tests__render-5.snap  discourse_ui__prompt__tests__render-6.snap  discourse_ui__prompt__tests__render-7.snap  discourse_ui__prompt__tests__render.snap
discourse-ui/src/events/: crossterm.rs  keys.rs  mod.rs  movement.rs  termion.rs
discourse-ui/src/select/: mod.rs  tests.rs
discourse-ui/src/select/snapshots/: discourse_ui__select__tests__render.snap
discourse-ui/src/snapshots/: discourse_ui__char_input__tests__render.snap  discourse_ui__input__tests__adjust_scrollback-2.snap  discourse_ui__input__tests__adjust_scrollback-3.snap  discourse_ui__input__tests__goto_last_line.snap  discourse_ui__input__tests__hide_cursor.snap  discourse_ui__input__tests__print_error.snap  discourse_ui__string_input__tests__render-3.snap  discourse_ui__text__tests__render_multiline-2.snap
discourse-ui/src/termion-snapshots/: discourse_ui__input__tests__render.snap  discourse_ui__prompt__tests__render-2.snap  discourse_ui__prompt__tests__render-6.snap  discourse_ui__prompt__tests__render-7.snap  discourse_ui__text__tests__render_multiline.snap
discourse-ui/termion-snapshots/: discourse_ui__char_input__tests__render.snap  discourse_ui__input__tests__adjust_scrollback-2.snap  discourse_ui__input__tests__adjust_scrollback-3.snap  discourse_ui__prompt__tests__render-2.snap  discourse_ui__prompt__tests__render-3.snap  discourse_ui__prompt__tests__render-4.snap  discourse_ui__prompt__tests__render-5.snap  discourse_ui__prompt__tests__render-6.snap  discourse_ui__prompt__tests__render.snap  discourse_ui__select__tests__render-2.snap  discourse_ui__select__tests__render-3.snap  discourse_ui__select__tests__render-4.snap  discourse_ui__select__tests__render.snap  discourse_ui__string_input__tests__render-2.snap  discourse_ui__string_input__tests__render.snap
inquisition-ui/: Cargo.toml
inquisition-ui/src/: async_input.rs  char_input.rs  input.rs  lib.rs  list.rs  string_input.rs  sync_input.rs  text.rs  widget.rs
inquisition-ui/src/backend/: mod.rs  style.rs
inquisition-ui/src/events/: async_events.rs  crossterm.rs  mod.rs
requestty-macro/: Cargo.toml  README.md
requestty-macro/src/: helpers.rs  lib.rs  question.rs
requestty-ui/: Cargo.toml  README.md
requestty-ui/crossterm-snapshots/: requestty_ui__input__tests__adjust_scrollback-2.snap  requestty_ui__input__tests__adjust_scrollback-3.snap  requestty_ui__input__tests__hide_cursor.snap  requestty_ui__input__tests__render.snap  requestty_ui__prompt__tests__render-2.snap  requestty_ui__prompt__tests__render-3.snap  requestty_ui__prompt__tests__render.snap  requestty_ui__select__tests__render-3.snap  requestty_ui__select__tests__render.snap
requestty-ui/src/: char_input.rs  error.rs  input.rs  layout.rs  lib.rs  prompt.rs  string_input.rs  style.rs  symbols.rs  text.rs  widgets.rs
requestty-ui/src/backend/: crossterm.rs  mod.rs  termion.rs  test_backend.rs
requestty-ui/src/events/: crossterm.rs  termion.rs
requestty-ui/src/select/: mod.rs  tests.rs
requestty-ui/termion-snapshots/: requestty_ui__char_input__tests__render.snap  requestty_ui__input__tests__goto_last_line.snap  requestty_ui__input__tests__print_error.snap  requestty_ui__prompt__tests__render-4.snap  requestty_ui__prompt__tests__render-5.snap  requestty_ui__prompt__tests__render-6.snap  requestty_ui__prompt__tests__render-7.snap  requestty_ui__select__tests__render-2.snap  requestty_ui__select__tests__render-4.snap  requestty_ui__string_input__tests__render-2.snap  requestty_ui__string_input__tests__render-3.snap  requestty_ui__string_input__tests__render.snap  requestty_ui__text__tests__render_multiline-2.snap  requestty_ui__text__tests__render_multiline.snap  requestty_ui__text__tests__render_single_line.snap
ui/: Cargo.toml
ui/src/: async_input.rs  char_input.rs  error.rs  lib.rs  list.rs  string_input.rs  sync_input.rs  widget.rs
ui/src/backend/: crossterm.rs  curses.rs  mod.rs  style.rs  termion.rs
ui/src/events/: crossterm.rs  mod.rs  termion.rs  unix.rs
(+654 files in other folders)
