[package]
name = "discourse"
version = "0.0.1"
authors = ["Lutetium Vanadium"]
edition = "2018"

[workspace]
members = [
    ".",
    "discourse-ui",
    "discourse-macros",
]

[dependencies]
tempfile = "3"
ui = { package = "discourse-ui", path = "./discourse-ui" }
macros = { package = "discourse-macros", path = "./discourse-macros" }

smallvec = { version = "1.6", optional = true }

[dev-dependencies]
trybuild = { version = "1.0.42", features = ["diff"] }
# remove color printing since it messes with the snapshot's colours
insta = { version = "1.7.1", default-features = false }
rand = "0.8"
rand_chacha = "0.3"

regex = "1.5"           # examples/prompt_module.rs
fuzzy-matcher = "0.3"   # examples/file.rs

[features]
default = ["crossterm", "smallvec"]
crossterm = ["ui/crossterm"]
termion = ["ui/termion"]
