[package]
name = "requestty"
version = "0.0.1"
authors = ["Lutetium Vanadium"]
edition = "2018"

[workspace]
members = [
    ".",
    "requestty-ui",
    "requestty-macros",
]

[dependencies]
tempfile = "3"
ui = { package = "requestty-ui", path = "./requestty-ui" }
macros = { package = "requestty-macros", path = "./requestty-macros" }

smallvec = { version = "1.6", optional = true }

[dev-dependencies]
trybuild = { version = "1.0.42", features = ["diff"] }
# remove color printing since it messes with the snapshot's colours
insta = { version = "1.7.1", default-features = false }
rand = "0.8"
rand_chacha = "0.3"

regex = "1.5"           # examples/{prompt_module,macro}.rs
fuzzy-matcher = "0.3"   # examples/file_auto_complete.rs

[features]
default = ["crossterm", "smallvec"]
crossterm = ["ui/crossterm"]
termion = ["ui/termion"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
