[package]
name = "requestty"
version = "0.1.1"
authors = ["Lutetium Vanadium"]
edition = "2018"
description = "An easy-to-use collection of interactive cli prompts"
homepage="https://github.com/Lutetium-Vanadium/requestty#readme"
repository = "https://github.com/Lutetium-Vanadium/requestty"
documentation="https://docs.rs/requestty"
readme = "README.md"
license = "MIT"
keywords = ["interactive", "prompt", "cli", "inquirer", "enquirer"]
categories = ["command-line-interface", "command-line-utilities"]
exclude = ["/.github/*", "/assets", "/requestty-ui", "/requestty-macro", "*-snapshots"]

[workspace]
members = [
    ".",
    "requestty-ui",
    "requestty-macro",
]

[dependencies]
tempfile = "3"
ui = { package = "requestty-ui", path = "./requestty-ui", version = "=0.1.1" }
macro = { package = "requestty-macro", path = "./requestty-macro", optional = true, version = "=0.1.1" }

smallvec = { version = "1.6", optional = true }

[dev-dependencies]
trybuild = { version = "1.0.42", features = ["diff"] }
# remove color printing since it messes with the snapshot's colours
insta = { version = "1.7.1", default-features = false }
rand = "0.8"
rand_chacha = "0.3"

regex = "1.5"           # examples/{prompt_module,macro}.rs
fuzzy-matcher = "0.3"   # examples/file_auto_complete.rs

[features]
default = ["crossterm", "smallvec"]
crossterm = ["ui/crossterm"]
termion = ["ui/termion"]
# Hack to get around trybuild not considering 'optional = true' as features
macros = ["macro"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "macros"
required-features = ["macros"]

[[test]]
name = "macros"
required-features = ["macros"]
