[package]
name = "discourse-ui"
version = "0.0.1"
authors = ["Lutetium Vanadium"]
edition = "2018"

[dependencies]
bitflags = "1.2"
textwrap = "0.14"
unicode-segmentation = "1.7"

crossterm = { version = "0.20", optional = true }
termion = { version = "1.5", optional = true }

[dev-dependencies]
# remove color printing since it messes with the snapshot's colours
insta = { version = "1.7.1", default-features = false }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
