[package]
name = "inquisition-ui"
version = "0.0.1"
authors = ["Lutetium Vanadium"]
edition = "2018"

[dependencies]
bitflags = "1.2"
unicode-segmentation = "1.7"

async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }

crossterm = { version = "0.19", optional = true }
termion = { version = "1.5", optional = true }

# The following dependencies are renamed in the form `<dep-name>-dep` to allow
# a feature name with the same name to be present. This is necessary since
# these features are required to enable other dependencies
smol-dep = { package = "smol", version = "1.2", optional = true }
tokio-dep = { package = "tokio", version = "1.5", optional = true, features = ["fs", "rt"] }
async-std-dep = { package = "async-std", version = "1.9", optional = true, features = ["unstable"] }

[features]
default = []
tokio = ["tokio-dep", "async-trait", "futures", "anes"]
smol = ["smol-dep", "async-trait", "futures", "anes"]
async-std = ["async-std-dep", "async-trait", "futures", "anes"]

[target.'cfg(unix)'.dependencies]
anes = { version = "0.1", optional = true, features = ["parser"] }
