[package]
name = "requestty-macro"
version = "0.1.1"
authors = ["Lutetium Vanadium"]
edition = "2018"
description = "The `questions` macro for `requestty`"
homepage="https://github.com/Lutetium-Vanadium/requestty#readme"
repository = "https://github.com/Lutetium-Vanadium/requestty"
documentation="https://docs.rs/requestty-macro"
readme = "README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
quote = "1"
bitflags = "1.2"
rustversion = "1.0"
