[package]
name = "requestty-ui"
version = "0.1.1"
authors = ["Lutetium Vanadium"]
edition = "2018"
description = "A widget based terminal ui rendering library."
homepage="https://github.com/Lutetium-Vanadium/requestty#readme"
repository = "https://github.com/Lutetium-Vanadium/requestty"
documentation="https://docs.rs/requestty-ui"
license = "MIT"
readme = "README.md"
keywords = ["interactive", "prompt", "cli", "inquirer", "enquirer"]
categories = ["command-line-interface", "command-line-utilities"]
exclude = ["*-snapshots"]

[dependencies]
bitflags = "1.2"
textwrap = "0.14"
unicode-segmentation = "1.7"

crossterm = { version = "0.20", optional = true }
termion = { version = "1.5", optional = true }

[dev-dependencies]
# remove color printing since it messes with the snapshot's colours
insta = { version = "1.7.1", default-features = false }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
