[package]
name = "ui"
version = "0.1.0"
authors = ["Lutetium Vanadium"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19"
lazy_static = "1.4"
unicode-segmentation = "1.7"

async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true, default-features = false }

[features]
default = []
async = ["async-trait", "futures", "crossterm/event-stream"]
